--- a/Manager/Notes/templates/notes.html
+++ b/Manager/Notes/templates/notes.html
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends 'main.html' %}
+{% block notes %}
 
-</body>
-</html>
+{% endblock %}
