--- a/Manager_notes/static/css.css
+++ b/Manager_notes/static/css.css
@@ -4,14 +4,13 @@ body{
 .top-bar{
     background: #009900;
     width: 102%;
-    margin-left: -1%;
+    margin-left: -19px;
     margin-top: -8px;
     height: 40px;
 }
 
 #exitt{
-    ;
-    margin-left: 13px;
+    margin-left: 18px;
     margin-top: 7px;
     position: absolute;
     color: black;
@@ -46,8 +45,8 @@ body{
 .button{
     background: #009900;
     color: black;
-    border: none;
     padding: 0px;
+    border: none;
     font-weight: normal;
     font-family: "DejaVu Serif";
 }
@@ -72,5 +71,8 @@ border: none;
 .error{
     color: red;
     font-size: 11px;
-
+}
+.notes{
+    width: 76%;
+    margin-left: 12%;
 }
