--- a/Manager_notes/static/css.css
+++ b/Manager_notes/static/css.css
@@ -50,6 +50,8 @@ body{
     font-weight: normal;
     font-family: "DejaVu Serif";
 }
+button::-moz-focus-inner,
+select::-moz-focus-inner,
 input[type="submit"]::-moz-focus-inner,
 input[type="file"] > input[type="button"]::-moz-focus-inner {/* */
 border: none;
@@ -73,6 +75,10 @@ border: none;
     font-size: 11px;
 }
 .notes{
-    width: 76%;
-    margin-left: 12%;
+    width: 70%;
+    margin-left: 18%;
+}
+select:hover{
+    color: white;
+    outline:none;
 }
