--- a/Manager_notes/templates/main.html
+++ b/Manager_notes/templates/main.html
@@ -6,6 +6,8 @@
     <title>Менеджер заметок</title>
     <link rel="stylesheet" type="text/css"
           href="{% static 'css.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'Ajax.js' %}"></script>
 </head>
 <body>
     <div class="top-bar">
@@ -18,6 +20,9 @@
     </div>
     <div class="notes">
         {% block notes %}{% endblock %}
+    </div>
+    <div class="note">
+        {% block note %}{% endblock %}
     </div>
     <div>
         {% block login %}{% endblock %}
